Fix button and input alignment

--- a/ocnfolder/styles/main.css
+++ b/ocnfolder/styles/main.css
@@ -20,3 +20,7 @@
     padding-left: 40px;
     padding-bottom: 5px;
 }
+
+.input-group-btn .btn {
+    line-height: 1.5;
+}
